update for pyapnea v0.0.3

--- a/notebooks/0_raw_data_analysis.ipynb
+++ b/notebooks/0_raw_data_analysis.ipynb
@@ -57,36 +57,8 @@
    "outputs": [],
    "source": [
     "def event_data_to_dataframe_all_channel(oscar_session_data):\n",
-    "    global_df = pd.DataFrame(columns=['Col1'])\n",
     "    possible_channels = [ChannelID.CPAP_FlowRate.value, ChannelID.CPAP_ClearAirway.value, ChannelID.CPAP_Obstructive.value, ChannelID.CPAP_Pressure.value]\n",
-    "    for channel in oscar_session_data.data.channels:\n",
-    "        if channel.code in possible_channels:\n",
-    "            y_col_name = [c[5] for c in CHANNELS if c[1].value == channel.code][0]\n",
-    "            gain = channel.events[0].gain\n",
-    "            if channel.events[0].t8 == 0:\n",
-    "                channel.events[0].time = range(0, channel.events[0].evcount * int(channel.events[0].rate),\n",
-    "                                               int(channel.events[0].rate))\n",
-    "            df = pd.DataFrame(data={'time': channel.events[0].time,\n",
-    "                                    y_col_name+'_no_gain': channel.events[0].data})\n",
-    "            df[y_col_name] = df[y_col_name+'_no_gain'] * gain\n",
-    "\n",
-    "            if channel.events[0].second_field:\n",
-    "                # not tested because do not have 2nd field in files\n",
-    "                df[y_col_name+'2_no_gain'] = channel.events[0].data2\n",
-    "                df[y_col_name + '2'] = df[y_col_name+'2_no_gain'] * gain\n",
-    "\n",
-    "            df['time_utc'] = df['time'] + channel.events[0].ts1\n",
-    "            df['time_utc'] = pd.to_datetime(df['time_utc'], unit='ms')\n",
-    "            #df.set_index('time_absolute', inplace=True)\n",
-    "            df = df.filter(regex='^(?!.*_no_gain)')\n",
-    "            if global_df.empty:\n",
-    "                global_df = df\n",
-    "            else:\n",
-    "                #global_df = pd.merge(global_df, df, right_index=True, left_index=True, how='outer')\n",
-    "                global_df = pd.merge(global_df, df, on='time_utc', how='outer',suffixes=('', '_DROP')).filter(regex='^(?!.*_DROP)')\n",
-    "                #global_df = pd.concat([global_df, df])\n",
-    "\n",
-    "    global_df['time_utc'] = global_df['time_utc'].dt.tz_localize('UTC')\n",
+    "    global_df = event_data_to_dataframe(oscar_session_data, possible_channels)\n",
     "    global_df['local_time'] = global_df['time_utc'].dt.tz_convert('America/Montreal')\n",
     "    global_df.sort_index(inplace=True)\n",
     "    return global_df"
@@ -223,11 +195,11 @@
     "                        'lenght FlowRate (ms)': flowrate_event.ts2 - flowrate_event.ts1,\n",
     "                        'FlowRate present': (ChannelID.CPAP_FlowRate.value in [c.code for c in oscar_session_data.data.channels])}\n",
     "\n",
-    "        # Events\n",
+    "        # Events - TODO Refactor with event_data_to_dataframe with event_channels as parameter\n",
     "        stat_session['events'] = []\n",
     "        for e in events_channels:\n",
     "            event_name = [c[5] for c in CHANNELS if c[1].value == e][0]\n",
-    "            event_channel_df = event_data_to_dataframe(oscar_session_data, e)\n",
+    "            event_channel_df = event_data_to_dataframe(oscar_session_data, [e])\n",
     "            if not event_channel_df.empty:\n",
     "                df_event = event_channel_df[~pd.isnull(event_channel_df[event_name])]\n",
     "                df_event['type']  = event_name\n",
