--- a/notebooks/kaggle_sleep_apnea_notebook_mne_package.ipynb
+++ b/notebooks/kaggle_sleep_apnea_notebook_mne_package.ipynb
@@ -52,7 +52,7 @@
    "source": [
     "filename_to_load = '../data/raw/ResMed_23192565579/Events/62202198.001'\n",
     "oscar_session_data = load_session(filename_to_load)\n",
-    "df = event_data_to_dataframe(oscar_session_data, ChannelID.CPAP_FlowRate.value)\n",
+    "df = event_data_to_dataframe(oscar_session_data, [ChannelID.CPAP_FlowRate.value])\n",
     "\n",
     "sfreq = 25\n",
     "\n",
@@ -89,7 +89,7 @@
     "with tqdm(total=len(list_files)) as pbar:\n",
     "    for f in list_files:\n",
     "        oscar_session_data = load_session(f['fullpath'])\n",
-    "        df = event_data_to_dataframe(oscar_session_data, ChannelID.CPAP_FlowRate.value)\n",
+    "        df = event_data_to_dataframe(oscar_session_data, [ChannelID.CPAP_FlowRate.value])\n",
     "        info = mne.create_info(ch_names=['FlowRate'] * 1 ,\n",
     "                       ch_types=['misc'] * 1,\n",
     "                       sfreq=sfreq)\n",
