--- a/trials/kaggle_tutorial_time_series.ipynb
+++ b/trials/kaggle_tutorial_time_series.ipynb
@@ -42,6 +42,7 @@
     "# import matplotlib as mpl\n",
     "import seaborn as sns\n",
     "\n",
+    "# v0.0.3\n",
     "from pyapnea.oscar.oscar_loader import load_session\n",
     "from pyapnea.oscar.oscar_getter import event_data_to_dataframe, get_channel_from_code\n",
     "from pyapnea.oscar.oscar_constants import CHANNELS, ChannelID"
@@ -66,7 +67,7 @@
    "source": [
     "filename_to_load = '../data/raw/ResMed_23192565579/Events/62202198.001'\n",
     "oscar_session_data = load_session(filename_to_load)\n",
-    "df = event_data_to_dataframe(oscar_session_data, ChannelID.CPAP_FlowRate.value)\n",
+    "df = event_data_to_dataframe(oscar_session_data, [ChannelID.CPAP_FlowRate.value])\n",
     "df[['time_utc', 'FlowRate']].set_index('time_utc').plot()"
    ],
    "metadata": {
