Adding fft and most frequent frequence

--- a/notebooks/tds_tutorial_anomaly_detection_time_series.ipynb
+++ b/notebooks/tds_tutorial_anomaly_detection_time_series.ipynb
@@ -19,6 +19,8 @@
     "from os.path import isfile, join\n",
     "import datetime\n",
     "\n",
+    "import scipy as sy\n",
+    "import scipy.fftpack as syfp\n",
     "from tqdm.notebook import tqdm\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -30,11 +32,7 @@
     "from pyapnea.oscar.oscar_constants import CHANNELS, ChannelID"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-31T19:20:51.626803966Z",
-     "start_time": "2023-05-31T19:20:51.546933305Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -49,11 +47,7 @@
     "list_files.extend([{'label': f, 'value': f, 'fullpath': join(data_path_cpap2, f)} for f in listdir(data_path_cpap2) if isfile(join(data_path_cpap2, f))])"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-31T19:20:51.685318574Z",
-     "start_time": "2023-05-31T19:20:51.551949099Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -64,11 +58,7 @@
     "sfreq = 25"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-31T19:20:51.685617067Z",
-     "start_time": "2023-05-31T19:20:51.599983215Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -83,11 +73,7 @@
     "df"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-31T19:20:51.904468813Z",
-     "start_time": "2023-05-31T19:20:51.600231856Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -107,11 +93,7 @@
     "dfm_annotation"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-31T19:20:51.916279923Z",
-     "start_time": "2023-05-31T19:20:51.905059Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -137,11 +119,7 @@
     "plt.show()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-31T19:20:58.578601464Z",
-     "start_time": "2023-05-31T19:20:51.917372989Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -149,15 +127,11 @@
    "execution_count": null,
    "outputs": [],
    "source": [
-    "rollmean = dfc.resample(rule='S').mean()\n",
-    "rollstd = dfc.resample(rule='S').std()"
+    "rollmean = dfc.resample(rule='4S').mean()\n",
+    "rollstd = dfc.resample(rule='4S').std()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-31T19:20:58.615412148Z",
-     "start_time": "2023-05-31T19:20:58.579132238Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -176,11 +150,7 @@
     "plt.show()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-31T19:21:05.718123425Z",
-     "start_time": "2023-05-31T19:20:58.605463711Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -190,11 +160,51 @@
    "source": [
     "print(len(dfc['FlowRate']))\n",
     "_ = plt.figure(figsize=(25,10))\n",
-    "_ = plt.specgram(dfc['FlowRate'], Fs=25, NFFT=32, noverlap=2, cmap='nipy_spectral')\n",
+    "_ = plt.specgram(dfc['FlowRate'], Fs=25, NFFT=64, noverlap=2, cmap='nipy_spectral')\n",
     "plt.xlabel('Time (s)')\n",
     "plt.ylabel('Frequency (Hz)')\n",
     "plt.colorbar(label='Intensity (dB)')\n",
     "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# from https://stackoverflow.com/questions/26105698/how-to-calculate-frequency-of-a-give-wave-and-time\n",
+    "# Do FFT analysis of array\n",
+    "dt = 40/1000  # 40 ms\n",
+    "FFT = sy.fft.fft(dfc['FlowRate'].values)\n",
+    "\n",
+    "# Getting the related frequencies\n",
+    "freqs = syfp.fftfreq(len(dfc['FlowRate']), dt)\n",
+    "\n",
+    "_ = plt.figure(figsize=(25,10))\n",
+    "_ = plt.plot(freqs, np.lib.scimath.log10(abs(FFT)), '.')\n",
+    "plt.xlim(-1, 1)\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# frequency most common in the signal\n",
+    "from operator import itemgetter\n",
+    "index, element = max(enumerate(np.lib.scimath.log10(abs(FFT))), key=itemgetter(1))\n",
+    "common_freq = freqs[index]\n",
+    "print('freq (Hz) = ', common_freq)\n",
+    "# most common breath length (s)\n",
+    "most_common_breath_length = 1/common_freq\n",
+    "print('most common breath len (s)', most_common_breath_length)"
    ],
    "metadata": {
     "collapsed": false
@@ -218,15 +228,6 @@
     "plt.xlim(event_time - datetime.timedelta(seconds=50), event_time + datetime.timedelta(seconds=10))\n",
     "plt.show()"
    ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
@@ -271,11 +272,7 @@
     "print(result[1])"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-05-31T17:49:19.174467287Z",
-     "start_time": "2023-05-31T17:49:19.160376663Z"
-    }
+    "collapsed": false
    }
   },
   {
