Implementing sliding windows with possible overlap

--- a/articles/researchproject/researchproject.tex
+++ b/articles/researchproject/researchproject.tex
@@ -78,6 +78,19 @@
         \item La pondération supérieure pour les données avec évènements.
         \item L'utilisation d'une focale loss
     \end{itemize}
+
+    \begin{table}[]
+    \begin{tabular}{l|l|lll}
+    \cline{2-2}
+                                                & Valeurs      &  &  &  \\ \cline{1-2}
+    \multicolumn{1}{|l|}{Taille de fenêtre (s)} & {[}20{]}     &  &  &  \\ \cline{1-2}
+    \multicolumn{1}{|l|}{Pas de fenêtre (s)}    & {[}1/f, 1{]} &  &  &  \\ \cline{1-2}
+    \end{tabular}
+    \caption{Hyperparametres de transformation des données}
+    \end{table}
+
+    TODO Figure de pipeline de traitement de données
+
     \section{Bibliographie}
 
 
